<resources>
    <string name="app_name">challenge_chapter_empat</string>
    <string name="judul">Judul</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="title">Title</string>
    <string name="input_data">Input Data</string>
    <string name="save">save</string>
    <string name="edit_data">Edit Data</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>
    <string name="update">update</string>
</resources>