<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_add"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddNoteFragment"
        android:backgroundTint="@color/nude">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/btn_logout"
                android:padding="18dp"
                android:background="@color/pewter"
                android:text="Welcome, username!" />

            <TextView
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="18dp"
                android:background="@color/pewter"
                android:text="Logout" />

            <TextView
                android:id="@+id/vAddNotescreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome_bar"
                android:gravity="center_horizontal"
                android:text="@string/input_data"
                android:textSize="34sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vAddNotescreen"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/addNote"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_below="@id/addTitle"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/add"
                android:importantForAutofill="no"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btn_input_note"
                android:layout_below="@id/addNote"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:backgroundTint="@color/charcoal"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</layout>